<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference
        app2:icon="@drawable/ic_arrow_back_white_24"
        app2:title="" />

    <PreferenceCategory android:title="Display"
        app2:layout="@layout/preference_category_premium">
        <androidx.preference.ListPreference
            android:title="@string/mcl_setting_category_renderer"
            android:key="renderer"
            android:defaultValue="opengles2"
            android:icon="@drawable/ic_set_renderer"
            app2:layout="@layout/preference_item_premium"
            app2:useSimpleSummaryProvider="true"/>

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="ignoreNotch"
            android:summary="@string/mcl_setting_subtitle_ignore_notch"
            android:title="@string/mcl_setting_title_ignore_notch"
            android:icon="@drawable/ic_set_notch"
            app2:layout="@layout/preference_switch_premium" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="resolutionRatio"
            android:summary="@string/mcl_setting_subtitle_resolution_scaler"
            android:title="@string/mcl_setting_title_resolution_scaler"
            app2:showSeekBarValue="true"
            app2:selectable="false"
            app2:min="@integer/resolution_seekbar_min"
            app2:seekBarIncrement="@integer/resolution_seekbar_increment"
            android:icon="@drawable/ic_set_resolution"
            app2:layout="@layout/preference_item_premium" />

        <SwitchPreference
            android:title="@string/preference_sustained_performance_title"
            android:summary="@string/preference_sustained_performance_description"
            android:key="sustainedPerformance"
            android:icon="@drawable/ic_set_sustained"
            android:defaultValue="false"
            app2:layout="@layout/preference_switch_premium" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="alternate_surface"
            android:summary="@string/mcl_setting_subtitle_use_surface_view"
            android:title="@string/mcl_setting_title_use_surface_view"
            android:icon="@drawable/ic_set_surface"
            app2:layout="@layout/preference_switch_premium" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="force_vsync"
            android:summary="@string/preference_force_vsync_description"
            android:title="@string/preference_force_vsync_title"
            android:icon="@drawable/ic_set_vsync"
            app2:layout="@layout/preference_switch_premium" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="use_angle"
            android:summary="@string/preference_use_angle_description"
            android:title="@string/preference_use_angle_title"
            android:icon="@drawable/ic_set_angle"
            app2:layout="@layout/preference_switch_premium" />

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="vsync_in_zink"
            android:summary="@string/preference_vsync_in_zink_description"
            android:title="@string/preference_vsync_in_zink_title"
            android:icon="@drawable/ic_set_gpu"
            app2:layout="@layout/preference_switch_premium" />

        <SwitchPreference
            android:title="@string/preference_force_legacy_zink_title"
            android:summary="@string/preference_force_legacy_zink_description"
            android:key="zinkForceLegacy"
            android:icon="@drawable/ic_set_vulkan"
            android:defaultValue="false"
            app2:layout="@layout/preference_switch_premium" />
    </PreferenceCategory>
</PreferenceScreen>
