<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference
        app2:icon="@drawable/ic_arrow_back_white_24"
        app2:title="" />

    <PreferenceCategory android:title="Miscellaneous"
        app2:layout="@layout/preference_category_premium">
        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_set_hash"
            android:key="checkGameFiles"
            android:summary="@string/preference_verify_game_files_description"
            android:title="@string/preference_verify_game_files_title"
            app2:layout="@layout/preference_switch_premium" />

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_set_flash"
            android:key="fastStartupCheck"
            android:summary="@string/preference_go_vroom_description"
            android:title="@string/preference_go_vroom_title"
            app2:layout="@layout/preference_switch_premium" />

        <androidx.preference.ListPreference
            android:defaultValue="default"
            android:icon="@drawable/ic_set_download"
            android:key="downloadSource"
            android:entries="@array/download_source_names"
            android:entryValues="@array/download_source_values"
            android:title="@string/preference_download_source_title"
            android:summary="@string/preference_download_source_description"
            app2:useSimpleSummaryProvider="true"
            app2:layout="@layout/preference_item_premium"/>

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_set_verify"
            android:key="verifyManifest"
            android:title="@string/preference_verify_manifest_title"
            android:summary="@string/preference_verify_manifest_description"
            app2:layout="@layout/preference_switch_premium"/>

        <SwitchPreference
            android:defaultValue="false"
            android:icon="@drawable/ic_set_vulkan"
            android:key="zinkPreferSystemDriver"
            android:summary="@string/preference_vulkan_driver_system_description"
            android:title="@string/preference_vulkan_driver_system_title"
            app2:layout="@layout/preference_switch_premium"/>

        <Preference
            android:key="microphoneAccessRequest"
            android:icon="@drawable/ic_set_mic"
            android:title="@string/preference_microphone_access_title"
            android:summary="@string/preference_microphone_access_description"
            app2:layout="@layout/preference_item_premium" />
    </PreferenceCategory>
</PreferenceScreen>
