<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.prefs.BackButtonPreference
        app2:icon="@drawable/ic_arrow_back_white_24"
        app2:title="" />

    <PreferenceCategory android:title="Java Runtime"
        app2:layout="@layout/preference_category_premium">
        <Preference
            android:key="install_jre"
            android:icon="@drawable/ic_set_runtime"
            android:persistent="false"
            android:summary="@string/multirt_subtitle"
            android:title="@string/multirt_title"
            app2:layout="@layout/preference_item_premium"/>

        <androidx.preference.EditTextPreference
            android:dialogTitle="@string/mcl_setting_title_javaargs"
            android:icon="@drawable/ic_set_console"
            android:key="javaArgs"
            android:singleLine="true"
            android:summary="@string/mcl_setting_subtitle_javaargs"
            android:title="@string/mcl_setting_title_javaargs"
            app2:layout="@layout/preference_item_premium" />

        <net.kdt.pojavlaunch.prefs.CustomSeekBarPreference
            android:key="allocation"
            android:icon="@drawable/ic_set_memory"
            android:summary="@string/mcl_memory_allocation_subtitle"
            android:title="@string/mcl_memory_allocation"
            app2:showSeekBarValue="true"
            app2:min="@integer/memory_seekbar_min"
            app2:seekBarIncrement="@integer/memory_seekbar_increment"
            app2:selectable="false"
            app2:layout="@layout/preference_item_premium"/>

        <SwitchPreference
            android:defaultValue="true"
            android:icon="@drawable/ic_set_sandbox"
            android:key="java_sandbox"
            android:summary="@string/mcl_setting_java_sandbox_subtitle"
            android:title="@string/mcl_setting_java_sandbox"
            app2:layout="@layout/preference_switch_premium" />
    </PreferenceCategory>
</PreferenceScreen>
