<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">
    <net.kdt.pojavlaunch.prefs.BackButtonPreference
        app2:icon="@drawable/ic_arrow_back_white_24"
        app2:title="" />
    <PreferenceCategory android:title="Experimental"
        app2:layout="@layout/preference_category_premium">
        <SwitchPreferenceCompat
            android:key="dump_shaders"
            android:title="@string/preference_shader_dump_title"
            android:summary="@string/preference_shader_dump_description"
            android:icon="@drawable/ic_set_shaders"
            app2:layout="@layout/preference_switch_premium" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="bigCoreAffinity"
            android:title="@string/preference_force_big_core_title"
            android:summary="@string/preference_force_big_core_desc"
            android:icon="@drawable/ic_set_cpu"
            app2:layout="@layout/preference_switch_premium" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="freedrenoSysmem"
            android:title="@string/preference_sysmem_title"
            android:summary="@string/preference_sysmem_summary"
            android:icon="@drawable/ic_set_chip"
            app2:layout="@layout/preference_switch_premium" />
    </PreferenceCategory>
</PreferenceScreen>
