<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_menu_main"
    android:gravity="top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_app">

    <LinearLayout
        android:id="@+id/icon_panel"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/icon_panel_bg"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:paddingHorizontal="@dimen/_4sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/news_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_px_book"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:padding="@dimen/_6sdp"
            android:contentDescription="@string/mcl_tab_wiki" />

        <ImageButton
            android:id="@+id/social_media_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_social_media"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:padding="@dimen/_6sdp"
            android:contentDescription="@string/mcl_button_social_media" />

        <ImageButton
            android:id="@+id/custom_control_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_px_gamepad"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:padding="@dimen/_6sdp"
            android:contentDescription="@string/mcl_option_customcontrol" />

        <ImageButton
            android:id="@+id/install_jar_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_px_java_run"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:padding="@dimen/_6sdp"
            android:contentDescription="@string/main_install_jar_file" />

        <ImageButton
            android:id="@+id/share_logs_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_px_sharelog"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:padding="@dimen/_6sdp"
            android:contentDescription="@string/main_share_logs" />

        <ImageButton
            android:id="@+id/open_files_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_px_folder"
            android:background="?android:attr/selectableItemBackground"
            android:scaleType="fitCenter"
            android:padding="@dimen/_6sdp"
            android:contentDescription="@string/mcl_button_open_directory" />

    </LinearLayout>

    <!-- Instance selector + edit button right below icon panel -->
    <com.kdt.mcgui.mcVersionSpinner
        android:id="@+id/mc_version_spinner"
        android:layout_width="0dp"
        android:layout_height="@dimen/_48sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@android:color/transparent"
        android:drawableEnd="@drawable/spinner_arrow"
        app:drawableEndSize="@dimen/padding_heavy"
        app:drawableStartIntegerScaling="true"
        app:drawableStartSize="@dimen/_36sdp"
        app:drawableEndPadding="@dimen/_1sdp"
        app:layout_constraintEnd_toStartOf="@+id/edit_profile_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_panel" />

    <ImageButton
        android:id="@+id/edit_profile_button"
        android:layout_width="@dimen/_48sdp"
        android:layout_height="@dimen/_48sdp"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/ic_px_edit"
        app:layout_constraintBottom_toBottomOf="@+id/mc_version_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mc_version_spinner" />

    <!-- Play button right below version spinner -->
    <com.kdt.mcgui.MineButton
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_62sdp"
        android:layout_marginHorizontal="@dimen/_17sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:textAllCaps="true"
        android:text="@string/main_play"
        app:layout_constraintTop_toBottomOf="@id/mc_version_spinner" />

</androidx.constraintlayout.widget.ConstraintLayout>
